--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -18,8 +18,9 @@
 <!ENTITY Ctr_cuiico			"Ikony">
 <!ENTITY Ctr_cuiicotxt		"Ikony vedle textu">
 <!ENTITY Ctr_cuitxt			"Text">
+<!ENTITY Ctr_cuitabsnontop	"Panely pod adresním řádkem">
 
-<!ENTITY Ctr_tnot			"(panely navrchu)">
+<!ENTITY Ctr_tnot			"(panely pod adresním řádkem)">
 
 <!ENTITY Ctr_tabcolors_t	"Barvy panelů &amp; textu">
 
