--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -18,6 +18,7 @@
 <!ENTITY Ctr_cuiico			"Ikoner">
 <!ENTITY Ctr_cuiicotxt		"Ikoner + Tekst">
 <!ENTITY Ctr_cuitxt			"Tekst">
+<!ENTITY Ctr_cuitabsnontop	"Faneblade skal ikke være øverst">
 
 <!ENTITY Ctr_tnot			"(faneblade skal ikke være øverst)">
 
