--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -18,8 +18,9 @@
 <!ENTITY Ctr_cuiico			"Symbole">
 <!ENTITY Ctr_cuiicotxt		"Symbole + Text">
 <!ENTITY Ctr_cuitxt			"Text">
+<!ENTITY Ctr_cuitabsnontop	"Tabs unten">
 
-<!ENTITY Ctr_tnot			"(Tabs 'unten')">
+<!ENTITY Ctr_tnot			"(Tabs unten)">
 
 <!ENTITY Ctr_tabcolors_t	"Tab Farben / Zeichensatz">
 
