--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -18,6 +18,7 @@
 <!ENTITY Ctr_cuiico			"Symbole">
 <!ENTITY Ctr_cuiicotxt		"Symbole + Tekst">
 <!ENTITY Ctr_cuitxt			"Tekst">
+<!ENTITY Ctr_cuitabsnontop	"Rejtarki nic górjejce">
 
 <!ENTITY Ctr_tnot			"(Rejtarki nic górjejce)">
 
