--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -18,6 +18,7 @@
 <!ENTITY Ctr_cuiico			"Icons">
 <!ENTITY Ctr_cuiicotxt		"Icons + Text">
 <!ENTITY Ctr_cuitxt			"Text">
+<!ENTITY Ctr_cuitabsnontop	"Tabs not on top">
 
 <!ENTITY Ctr_tnot			"(tabs not on top)">
 
