--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -18,6 +18,7 @@
 <!ENTITY Ctr_cuiico			"Symbole">
 <!ENTITY Ctr_cuiicotxt		"Symbole + Tekst">
 <!ENTITY Ctr_cuitxt			"Tekst">
+<!ENTITY Ctr_cuitabsnontop	"Rajtarki nic horjeka">
 
 <!ENTITY Ctr_tnot			"(Rajtarki nic horjeka)">
 
