--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -18,6 +18,7 @@
 <!ENTITY Ctr_cuiico			"Icone">
 <!ENTITY Ctr_cuiicotxt		"Icone e testo">
 <!ENTITY Ctr_cuitxt			"Testo">
+<!ENTITY Ctr_cuitabsnontop	"Schede in basso">
 
 <!ENTITY Ctr_tnot			"(schede in basso)">
 
