--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -18,6 +18,7 @@
 <!ENTITY Ctr_cuiico			"アイコン">
 <!ENTITY Ctr_cuiicotxt		"アイコン+テキスト">
 <!ENTITY Ctr_cuitxt			"テキスト">
+<!ENTITY Ctr_cuitabsnontop	"タブを下にする">
 
 <!ENTITY Ctr_tnot			"(タブを上にする)">
 
