--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -18,6 +18,7 @@
 <!ENTITY Ctr_cuiico			"Ícones">
 <!ENTITY Ctr_cuiicotxt		"Ícones + Texto">
 <!ENTITY Ctr_cuitxt			"Texto">
+<!ENTITY Ctr_cuitabsnontop	"Guias embaixo">
 
 <!ENTITY Ctr_tnot			"(guias embaixo)">
 
