--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -18,6 +18,7 @@
 <!ENTITY Ctr_cuiico			"Значки">
 <!ENTITY Ctr_cuiicotxt		"Значки + текст">
 <!ENTITY Ctr_cuitxt			"Текст">
+<!ENTITY Ctr_cuitabsnontop	"Вкладки не вверху">
 
 <!ENTITY Ctr_tnot			"(вкладки не вверху)">
 
