--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -18,6 +18,7 @@
 <!ENTITY Ctr_cuiico			"Ikone">
 <!ENTITY Ctr_cuiicotxt		"Ikone + Besedilo">
 <!ENTITY Ctr_cuitxt			"Besedilo">
+<!ENTITY Ctr_cuitabsnontop	"Zavihki niso na vrhu">
 
 <!ENTITY Ctr_tnot			"(zavihki niso na vrhu)">
 
