--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -18,6 +18,7 @@
 <!ENTITY Ctr_cuiico			"图标">
 <!ENTITY Ctr_cuiicotxt		"图标和文本">
 <!ENTITY Ctr_cuitxt			"文本">
+<!ENTITY Ctr_cuitabsnontop	"标签栏不在顶部">
 
 <!ENTITY Ctr_tnot			"(标签栏不在顶部)">
 
