--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -18,6 +18,7 @@
 <!ENTITY Ctr_cuiico			"圖示">
 <!ENTITY Ctr_cuiicotxt		"圖示與文字">
 <!ENTITY Ctr_cuitxt			"文字">
+<!ENTITY Ctr_cuitabsnontop	"分頁列不置頂">
 
 <!ENTITY Ctr_tnot			"(分頁列不置頂)">
 
