--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -18,6 +18,7 @@
 <!ENTITY Ctr_cuiico			"Іконки">
 <!ENTITY Ctr_cuiicotxt		"Іконки + Текст">
 <!ENTITY Ctr_cuitxt			"Текст">
+<!ENTITY Ctr_cuitabsnontop	"Вкладки не нагорі">
 
 <!ENTITY Ctr_tnot			"(вкладки не нагорі)">
 
